Add getting Foursquare data

--- a/Toronto.ipynb
+++ b/Toronto.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "from geopy.geocoders import Nominatim\n",
-    "import folium"
+    "import folium\n",
+    "import json"
    ]
   },
   {
@@ -465,6 +466,226 @@
     "        parse_html=False).add_to(map_toronto)  \n",
     "    \n",
     "map_toronto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get foursquare data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CLIENT_ID, CLIENT_SECRET and VERSION are stored in a secrets.json file, not committed to the repo\n",
+    "```json\n",
+    "{\n",
+    "\t\"CLIENT_ID\": \"your_client_id\",\n",
+    "\t\"CLIENT_SECRET\": \"your_client_secret\",\n",
+    "\t\"VERSION\": \"your_version\"\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "secrets = json.load(open('secrets.json'))\n",
+    "CLIENT_ID = secrets['CLIENT_ID']\n",
+    "CLIENT_SECRET = secrets['CLIENT_SECRET']\n",
+    "VERSION = secrets['VERSION']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functinon to get nearby venues by coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getNearbyVenues(names, latitudes, longitudes, radius=500, limit=100):\n",
+    "    \n",
+    "    venues_list=[]\n",
+    "    for name, lat, lng in zip(names, latitudes, longitudes):       \n",
+    "            \n",
+    "        # create the API request URL\n",
+    "        url = 'https://api.foursquare.com/v2/venues/explore?&client_id={}&client_secret={}&v={}&ll={},{}&radius={}&limit={}'.format(\n",
+    "            CLIENT_ID, \n",
+    "            CLIENT_SECRET, \n",
+    "            VERSION, \n",
+    "            lat, \n",
+    "            lng, \n",
+    "            radius, \n",
+    "            limit)\n",
+    "            \n",
+    "        # make the GET request\n",
+    "        results = requests.get(url).json()[\"response\"]['groups'][0]['items']\n",
+    "        \n",
+    "        # return only relevant information for each nearby venue\n",
+    "        venues_list.append([(\n",
+    "            name, \n",
+    "            lat, \n",
+    "            lng, \n",
+    "            v['venue']['name'], \n",
+    "            v['venue']['location']['lat'], \n",
+    "            v['venue']['location']['lng'],  \n",
+    "            v['venue']['categories'][0]['name']) for v in results])\n",
+    "\n",
+    "    nearby_venues = pd.DataFrame([item for venue_list in venues_list for item in venue_list])\n",
+    "    nearby_venues.columns = ['Neighborhood', \n",
+    "                  'Neighborhood Latitude', \n",
+    "                  'Neighborhood Longitude', \n",
+    "                  'Venue', \n",
+    "                  'Venue Latitude', \n",
+    "                  'Venue Longitude', \n",
+    "                  'Venue Category']\n",
+    "    \n",
+    "    return(nearby_venues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toronto_venues = getNearbyVenues(names=cities_geodata['Neighborhood'],\n",
+    "                                 latitudes=cities_geodata['Latitude'],\n",
+    "                                 longitudes=cities_geodata['Longitude']\n",
+    "                                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Neighborhood Latitude</th>\n",
+       "      <th>Neighborhood Longitude</th>\n",
+       "      <th>Venue</th>\n",
+       "      <th>Venue Latitude</th>\n",
+       "      <th>Venue Longitude</th>\n",
+       "      <th>Venue Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "      <td>Brookbanks Park</td>\n",
+       "      <td>43.751976</td>\n",
+       "      <td>-79.332140</td>\n",
+       "      <td>Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "      <td>KFC</td>\n",
+       "      <td>43.754387</td>\n",
+       "      <td>-79.333021</td>\n",
+       "      <td>Fast Food Restaurant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "      <td>Variety Store</td>\n",
+       "      <td>43.751974</td>\n",
+       "      <td>-79.333114</td>\n",
+       "      <td>Food &amp; Drink Shop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "      <td>Victoria Village Arena</td>\n",
+       "      <td>43.723481</td>\n",
+       "      <td>-79.315635</td>\n",
+       "      <td>Hockey Arena</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "      <td>Tim Hortons</td>\n",
+       "      <td>43.725517</td>\n",
+       "      <td>-79.313103</td>\n",
+       "      <td>Coffee Shop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Neighborhood  Neighborhood Latitude  Neighborhood Longitude  \\\n",
+       "0         Parkwoods              43.753259              -79.329656   \n",
+       "1         Parkwoods              43.753259              -79.329656   \n",
+       "2         Parkwoods              43.753259              -79.329656   \n",
+       "3  Victoria Village              43.725882              -79.315572   \n",
+       "4  Victoria Village              43.725882              -79.315572   \n",
+       "\n",
+       "                    Venue  Venue Latitude  Venue Longitude  \\\n",
+       "0         Brookbanks Park       43.751976       -79.332140   \n",
+       "1                     KFC       43.754387       -79.333021   \n",
+       "2           Variety Store       43.751974       -79.333114   \n",
+       "3  Victoria Village Arena       43.723481       -79.315635   \n",
+       "4             Tim Hortons       43.725517       -79.313103   \n",
+       "\n",
+       "         Venue Category  \n",
+       "0                  Park  \n",
+       "1  Fast Food Restaurant  \n",
+       "2     Food & Drink Shop  \n",
+       "3          Hockey Arena  \n",
+       "4           Coffee Shop  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toronto_venues.head()"
    ]
   },
   {
