Adding methodology section

--- a/Moscow.ipynb
+++ b/Moscow.ipynb
@@ -831,7 +831,7 @@
     "These were preliminary results with different number of clusters:  \n",
     "- 2 clusters only show the uptown/downtown divide\n",
     "- 3 clusters add clustering within the downtown\n",
-    "- 4 clusters also identify clearly underdeveloped neighborhoods (very low number of venues)\n",
+    "- 4 clusters also identify neighborhoods with very low number of venues\n",
     "- 5 and more clusters are difficult to interpret  \n",
     "\n",
     "For the final analysis let's settle on 4 clusters."
@@ -850,7 +850,7 @@
     "kmeans = KMeans(n_clusters=kclusters, random_state=0).fit(cluster_df)\n",
     "\n",
     "kmeans_labels = kmeans.labels_\n",
-    "# Change label numbers so they go from highest score to lowest\n",
+    "# Change label numbers so they go from highest scores to lowest\n",
     "replace_labels = {0:2, 1:1, 2:0, 3:3}\n",
     "for i in range(len(kmeans_labels)):\n",
     "    kmeans_labels[i] = replace_labels[kmeans_labels[i]]\n",
