Added Results section

--- a/Moscow.ipynb
+++ b/Moscow.ipynb
@@ -1257,7 +1257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Map the data"
+    "Map the data. For each station we'll display top 3 venue categories."
    ]
   },
   {
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1350,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "underdeveloped neighborhoods"
+    "Here is how we can characterize the clusters by looking at venue scores\n",
+    "- Cluster 0 (Blue) has consistently high scores for all venue categories. This is the most diversely developed part of the city\n",
+    "- Cluster 1 (Green) has highest marks for Professional&Other Places. This is the business part of the city.\n",
+    "- Cluster 2 (Orange) has lower marks with best scores in Profiessional, Residence and Shop&Service.\n",
+    "- Cluster 3 (Red) has low marks across the board. These appear to be underdeveloped areas.  \n",
+    "\n",
+    "Plotting the clusters on a map shows us that\n",
+    "- Cluster 0 is the oldest central part of the city\n",
+    "- Cluster 1 is also downtown. Most of these stations are inside or near the [Circle Line](https://en.wikipedia.org/wiki/Koltsevaya_line) and have excellent transit accessibility.\n",
+    "- Clusters 2 and 3 aren’t so clearly geographically distributed. Cluster 3 areas tend to be at the outskirts but some are more centrally located.\n",
+    "\n",
+    "Some stations were classified as Cluster 4 despite being more centrally and accessibly located. This could be a legacy of the “Rust Belt” of closed and abandoned factories (https://www.vesti.ru/doc.html?id=3030139&cid=4441). Many stations of the recently opened [Moscow Central Circle railway](https://en.wikipedia.org/wiki/Moscow_Central_Circle) fall into this category. These are prime areas for business and residential development."
    ]
   },
   {
@@ -1364,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "discussion"
+    "To be fair, Foursquare data isn’t all-encompassing. The highest number of venues are in the Food and Shop & Service categories. Data doesn’t take into account a venue’s size (e.g. a university building attracts a lot more people that a hot dog stand – each of them is still one Foursquare “venue”)."
    ]
   },
   {
@@ -1378,7 +1389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Foursquare data can provide some insights but still limited"
+    "Foursquare data is limited but can provide insights into a city’s development. This data could be combined with other sources (e.g. city data on number of residents) to provide more accurate results."
    ]
   },
   {
